--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@clerk/clerk-sdk-node": "^5.0.20",
     "@clerk/nextjs": "^5.2.8",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@stripe/stripe-js": "^4.1.0",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.3.1",
     "clsx": "^2.1.1",
@@ -29,6 +31,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "stripe": "^16.5.0",
     "svix": "^1.25.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
